[package]
name = "rsatv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["protocols", ]

[workspace.package]
authors = [""]
edition = "2021"
homepage = ""
license = "Apache-2.0"
repository = ""
rust-version = "1.75"
version = "0.1.0"
