[package]
name = "protocols"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }
bytes = "1"
anyhow = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
